Update index.html test image folder

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <main>
     <h2>Bridging Cross-Tool Gaps for Maximum Efficiency</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/bridgegap.jfif" alt="Cross-tool transitions">
+      <img src="bridgegap.jfif" alt="Cross-tool transitions">
       <div class="feature-content">
         <p>Transitioning between tools like LS-DYNA, PAM-CRASH, ANSA, and HyperMesh is often a major productivity drain due to each tool's unique configuration requirements. <a href="#" class="cta">CAE Co-Pilot</a> provides predefined workflows and contextual guidance for each tool pairing, enabling engineers to get up to speed quickly and accurately.</p>
         <a href="#" class="cta">Learn More</a>
@@ -100,7 +100,7 @@
     </div>
     <h2>Retain and Reuse Critical Engineering Knowledge</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/reuse2.jpg" alt="Knowledge retention">
+      <img src="reuse2.jpg" alt="Knowledge retention">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> serves as a centralized repository of knowledge, ensuring that past successes, solutions, and best practices are accessible when they're needed most. Engineers can retrieve documented SOPs, boundary condition setups, mesh refinement methods, and troubleshooting solutions from past projects, keeping valuable knowledge alive.</p>
         <a href="#" class="cta">Discover the Benefits</a>
