--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <main>
     <h2>Bridging Cross-Tool Gaps for Maximum Efficiency</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/bridgegap.jfif" alt="Cross-tool transitions">
+      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/bridgegap.png" alt="Cross-tool transitions">
       <div class="feature-content">
         <p>Transitioning between tools like LS-DYNA, PAM-CRASH, ANSA, and HyperMesh is often a major productivity drain due to each tool's unique configuration requirements. <a href="#" class="cta">CAE Co-Pilot</a> provides predefined workflows and contextual guidance for each tool pairing, enabling engineers to get up to speed quickly and accurately.</p>
         <a href="#" class="cta">Learn More</a>
@@ -100,7 +100,7 @@
     </div>
     <h2>Retain and Reuse Critical Engineering Knowledge</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/reuse2.jpg" alt="Knowledge retention">
+      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/reuse2.png" alt="Knowledge retention">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> serves as a centralized repository of knowledge, ensuring that past successes, solutions, and best practices are accessible when they're needed most. Engineers can retrieve documented SOPs, boundary condition setups, mesh refinement methods, and troubleshooting solutions from past projects, keeping valuable knowledge alive.</p>
         <a href="#" class="cta">Discover the Benefits</a>
@@ -108,7 +108,7 @@
     </div>
     <h2>Eliminate Repetitive, Error-Prone Troubleshooting</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/troubleshoot.jfif" alt="Troubleshooting">
+      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/troubleshoot.png" alt="Troubleshooting">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> leverages insights from prior solutions, so engineers receive targeted, contextually relevant troubleshooting assistance immediately. This enables faster issue resolution and reduces dependence on senior team members.</p>
         <a href="#" class="cta">Explore the Solution</a>
@@ -116,7 +116,7 @@
     </div>
     <h2>Simplified FE Model Building with Integrated Best Practices and SOPs</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/femodel.jfif" alt="FE model building">
+      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/femodel.png" alt="FE model building">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> simplifies FE model building by integrating standard operating procedures (SOPs), tutorials, and best practices for each preprocessing tool, ensuring that engineers can quickly create models that meet quality standards.</p>
         <a href="#" class="cta">Learn More</a>
@@ -124,7 +124,7 @@
     </div>
     <h2>Enhance Team Independence and Reduce Training Time</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/training.jfif" alt="Team independence">
+      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/training.png" alt="Team independence">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> reduces dependency by providing step-by-step guidance and tool-specific best practices, so team members can quickly gain proficiency and complete configurations independently.</p>
         <a href="#" class="cta">Explore the Benefits</a>
