--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
     <h2>Eliminate Repetitive, Error-Prone Troubleshooting</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/troubleshoot.jfif" alt="Troubleshooting">
+      <img src="troubleshoot.jfif" alt="Troubleshooting">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> leverages insights from prior solutions, so engineers receive targeted, contextually relevant troubleshooting assistance immediately. This enables faster issue resolution and reduces dependence on senior team members.</p>
         <a href="#" class="cta">Explore the Solution</a>
@@ -116,7 +116,7 @@
     </div>
     <h2>Simplified FE Model Building with Integrated Best Practices and SOPs</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/femodel.jfif" alt="FE model building">
+      <img src="femodel.jfif" alt="FE model building">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> simplifies FE model building by integrating standard operating procedures (SOPs), tutorials, and best practices for each preprocessing tool, ensuring that engineers can quickly create models that meet quality standards.</p>
         <a href="#" class="cta">Learn More</a>
@@ -124,7 +124,7 @@
     </div>
     <h2>Enhance Team Independence and Reduce Training Time</h2>
     <div class="feature">
-      <img src="https://github.com/DATABASE-VARPHI/cae-co-pilot-newsletter/blob/images/training.jfif" alt="Team independence">
+      <img src="training.jfif" alt="Team independence">
       <div class="feature-content">
         <p><a href="#" class="cta">CAE Co-Pilot</a> reduces dependency by providing step-by-step guidance and tool-specific best practices, so team members can quickly gain proficiency and complete configurations independently.</p>
         <a href="#" class="cta">Explore the Benefits</a>
