--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <img src="bridgegap.jfif" alt="Cross-tool transitions">
       <div class="feature-content">
         <p>Transitioning between tools like LS-DYNA, PAM-CRASH, ANSA, and HyperMesh is often a major productivity drain due to each tool's unique configuration requirements. <a href="https://www.linkedin.com/posts/varphi-llp_ai-engineering-innovation-activity-7259502625983725568-V7iX?utm_source=share&utm_medium=member_desktop" class="cta">CAE Co-Pilot</a> provides predefined workflows and contextual guidance for each tool pairing, enabling engineers to get up to speed quickly and accurately.</p>
-        <a href="http://www.varphi.in" class="cta">Learn More</a>
+        <a href="https://www.varphi.in/contact-4" class="cta">Learn More</a>
       </div>
     </div>
     <h2>Retain and Reuse Critical Engineering Knowledge</h2>
@@ -103,7 +103,7 @@
       <img src="reuse2.jpg" alt="Knowledge retention">
       <div class="feature-content">
         <p><a href="https://www.linkedin.com/posts/varphi-llp_realtime-engineering-design-activity-7260468155142021120-0Glu?utm_source=share&utm_medium=member_desktop" class="cta">CAE Co-Pilot</a> serves as a centralized repository of knowledge, ensuring that past successes, solutions, and best practices are accessible when they're needed most. Engineers can retrieve documented SOPs, boundary condition setups, mesh refinement methods, and troubleshooting solutions from past projects, keeping valuable knowledge alive.</p>
-        <a href="http://www.varphi.in" class="cta">Discover the Benefits</a>
+        <a href="https://www.varphi.in/contact-4" class="cta">Discover the Benefits</a>
       </div>
     </div>
     <h2>Eliminate Repetitive, Error-Prone Troubleshooting</h2>
@@ -111,7 +111,7 @@
       <img src="troubleshoot.jfif" alt="Troubleshooting">
       <div class="feature-content">
         <p><a href="https://www.linkedin.com/posts/varphi-llp_llm-engineering-innovation-activity-7259774145515683840-knZF?utm_source=share&utm_medium=member_desktop" class="cta">CAE Co-Pilot</a> leverages insights from prior solutions, so engineers receive targeted, contextually relevant troubleshooting assistance immediately. This enables faster issue resolution and reduces dependence on senior team members.</p>
-        <a href="http://www.varphi.in" class="cta">Explore the Solution</a>
+        <a href="https://www.varphi.in/contact-4" class="cta">Explore the Solution</a>
       </div>
     </div>
     <h2>Simplified FE Model Building with Integrated Best Practices and SOPs</h2>
@@ -119,7 +119,7 @@
       <img src="femodel.jfif" alt="FE model building">
       <div class="feature-content">
         <p><a href="https://www.linkedin.com/posts/varphi-llp_llm-engineering-innovation-activity-7259774145515683840-knZF?utm_source=share&utm_medium=member_desktop" class="cta">CAE Co-Pilot</a> simplifies FE model building by integrating standard operating procedures (SOPs), tutorials, and best practices for each preprocessing tool, ensuring that engineers can quickly create models that meet quality standards.</p>
-        <a href="http://www.varphi.in" class="cta">Learn More</a>
+        <a href="https://www.varphi.in/contact-4" class="cta">Learn More</a>
       </div>
     </div>
     <h2>Enhance Team Independence and Reduce Training Time</h2>
@@ -127,7 +127,7 @@
       <img src="training.jfif" alt="Team independence">
       <div class="feature-content">
         <p><a href="https://www.linkedin.com/posts/varphi-llp_llm-engineering-innovation-activity-7259774145515683840-knZF?utm_source=share&utm_medium=member_desktop" class="cta">CAE Co-Pilot</a> reduces dependency by providing step-by-step guidance and tool-specific best practices, so team members can quickly gain proficiency and complete configurations independently.</p>
-        <a href="http://www.varphi.in" class="cta">Explore the Benefits</a>
+        <a href="https://www.varphi.in/contact-4" class="cta">Explore the Benefits</a>
       </div>
     </div>
   </main>
